[tool.poetry]
name = "nautobot-ddns"
version = "1.0.3"
description = "Dynamic DNS Connector for Nautobot"
authors = ["Jakub Jastrabik <jastrabik.kubko@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
