[metadata]
name = nautobot_ddns
version = attr: nautobot_ddns.VERSION
description = Dynamic DNS Connector for nautobot
long_description = file: README.md
long_description_content_type = text/markdown
author = Jakub Jastrabik && Sander Steffann
author_email = sander@steffann.nl
url = https://github.com/sjm-steffann/nautobot_ddns
license = Apache 2.0
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Django
    Framework :: Django :: 3.0
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    setuptools
    dnspython
